[metadata]
name = autobahn-api
version = 1.0.0
author = Bodo Schönfeld
author-email = bodo.schoenfeld@niftycode.de
license = MIT
long_description = file: README.md
url = 
requires-python = >=3.7
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
